--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "concurrently \"cd proxyserver/ && nodemon server.js\" \"npm run start \"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -25,7 +26,8 @@
       "react-app",
       "react-app/jest",
       "plugin:prettier/recommended"
-    ], "rules": {
+    ],
+    "rules": {
       "react/jsx-pascal-case": 0
     }
   },
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^6.5.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1"
